// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throwing not Error objects 1`] = `
Object {
  "rest": " FAIL  __tests__/throw-number-test.js
  ● Test suite failed to run

    Expected an Error, but \\"1\\" was thrown

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-number-test.js\\".
",
}
`;

exports[`throwing not Error objects 2`] = `
Object {
  "rest": " FAIL  __tests__/throw-string-test.js
  ● Test suite failed to run

    Error
      banana

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-string-test.js\\".
",
}
`;

exports[`throwing not Error objects 3`] = `
Object {
  "rest": " FAIL  __tests__/throw-object-test.js
  ● Test suite failed to run

    Error: No message was provided

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"throw-object-test.js\\".
",
}
`;

exports[`throwing not Error objects 4`] = `
Object {
  "rest": " FAIL  __tests__/assertion-count-test.js
  ● .assertions() › throws

    expect(received).toBeTruthy()
    
    Expected value to be truthy, instead received
      false
      
      at Object.throws (__tests__/assertion-count-test.js:14:17)

  ● .assertions() › throws

    expect.assertions(2)
    
    Expected two assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  ● .assertions() › throws on redeclare of assertion count

    expect(received).toBeTruthy()
    
    Expected value to be truthy, instead received
      false
      
      at Object.redeclare (__tests__/assertion-count-test.js:18:17)

  ● .assertions() › throws on assertion

    expect.assertions(0)
    
    Expected zero assertions to be called but only received one assertion call.
      
      at addAssertionErrors (../../packages/jest-jasmine2/build/setup-jest-globals.js:56:21)

  .assertions()
    ✕ throws
    ✕ throws on redeclare of assertion count
    ✕ throws on assertion

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       3 failed, 3 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"assertion-count-test.js\\".
",
}
`;

exports[`works with node assert 1`] = `
Object {
  "rest": " FAIL  __tests__/node-assertion-error-test.js
  ● assert

    AssertionError: false == true
      
      at Object.test (__tests__/node-assertion-error-test.js:16:3)

  ● assert with a message

    AssertionError: this is a message
      
      at Object.test (__tests__/node-assertion-error-test.js:20:3)

  ● assert.ok

    AssertionError: false == true
      
      at Object.test (__tests__/node-assertion-error-test.js:24:10)

  ● assert.ok with a message

    AssertionError: this is a message
      
      at Object.test (__tests__/node-assertion-error-test.js:28:10)

  ● assert.equal

    AssertionError: 1 == 2
      
      at Object.test (__tests__/node-assertion-error-test.js:32:10)

  ● assert.equal with a message

    AssertionError: this is a message
      
      at Object.test (__tests__/node-assertion-error-test.js:36:10)

  ● assert.deepEqual

    AssertionError: { a: { b: { c: 5 } } } deepEqual { a: { b: { c: 6 } } }
      
      at Object.test (__tests__/node-assertion-error-test.js:40:10)

  ● assert.deepEqual with a message

    AssertionError: this is a message
      
      at Object.test (__tests__/node-assertion-error-test.js:44:10)

  ✕ assert
  ✕ assert with a message
  ✕ assert.ok
  ✕ assert.ok with a message
  ✕ assert.equal
  ✕ assert.equal with a message
  ✕ assert.deepEqual
  ✕ assert.deepEqual with a message

",
  "summary": "Test Suites: 1 failed, 1 total
Tests:       8 failed, 8 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites matching \\"node-assertion-error-test.js\\".
",
}
`;
